--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Design-minded front-end software engineer focused on building beautiful interfaces and experiences",
   "repository": {
     "type": "git",
-    "url": "https://github.com/bchiang7/bchiang7.github.io"
+    "url": "https://matthiastakele.github.io"
   },
-  "homepage": "https://github.com/bchiang7/bchiang7.github.io",
+  "homepage": "https://matthiastakele.github.io",
   "main": "gulpfile.js",
   "scripts": {
     "start": "gulp serve --watch",
