--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 name: Matthias Takele
-title: Matthias Takele | Front End Software Engineer
-description: Design-minded front-end software engineer focused on building beautiful interfaces and experiences
+title: Matthias Takele | Software Engineer
+description: Software engineer creating impactful, design-centered applications and scalable infrastructure
 url: https://matthiastakele.github.io/
 baseurl: ''
 email: matthiastakele@gmail.com
